--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-   <title>srisWebsite</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Simple Responsive Page</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>srishanthraoA</h1>
-   <h2>sirswork</h2>
+
+  <header>
+    <img src="image.jpeg" alt="Profile Photo">
+    <h1>Sri Shanth</h1>
+    <p>Web Developer & Learner</p>
+  </header>
+
+  <section>
+    <h2>Education</h2>
+    <table>
+      <tr>
+        <th>KLH university</th>
+        <th>Btech in AIDS</th>
+        <th>2025</th>
+      </tr>
+    </table>
+  </section>
+
 </body>
-</html> 
+</html>
