Add responsive styling with external CSS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <img src="image.jpeg" alt="Profile Photo">
+    <img src="image.jpeg" >
     <h1>Sri Shanth</h1>
     <p>Web Developer & Learner</p>
   </header>
