Update style and layout for responsive education section

--- a/index.html
+++ b/index.html
@@ -3,25 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Simple Responsive Page</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Sri's Responsive Page</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <header>
-    <img src="image.jpeg" >
+    <img src="image.jpeg" />
     <h1>Sri Shanth</h1>
-    <p>Web Developer & Learner</p>
+    <p>Web Developer & Student</p>
   </header>
 
-  <section>
+  <section class="education">
     <h2>Education</h2>
     <table>
-      <tr>
-        <th>KLH university</th>
-        <th>Btech in AIDS</th>
-        <th>2025</th>
-      </tr>
+      <thead>
+        <tr>
+          <th>Institution</th>
+          <th>Course</th>
+          <th>Year</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>KLEF</td>
+          <td>B.Tech - CSE</td>
+          <td>2022–2026</td>
+        </tr>
+      </tbody>
     </table>
   </section>
 
